# macaron

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  action.yaml  action.yml  build_spec.yaml  go.mod  go.sum  pyproject.toml  testpolicy.dl
.github/: dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.md
.github/codeql/: codeql-config.yaml
.github/workflows/: _build.yaml  _build_docker.yaml  _deploy-github-pages.yaml  _generate-rebase.yaml  _release-notifications.yaml  build_base_image.yaml  build_semgrep_wheel.yaml  codeql-analysis.yaml  dependabot-automerge.yaml  macaron-analysis.yaml  manual-deploy-github-pages.yaml  pr-change-set.yaml  pr-conventional-commits.yaml  publish_github_actions.yaml  release.yaml  scorecards-analysis.yaml  test_docker_build.yaml  test_macaron_action.yaml
docker/: Dockerfile.base  Dockerfile.final  Dockerfile.fix_optimization_error  Dockerfile.prod  Dockerfile.test  Dockerfile.test_3_11_slim  anotherDockerfile  user.sh
docs/: Makefile  README.md  make.bat
docs/source/: conf.py  glossary.rst  index.rst
docs/source/_static/: style.css
docs/source/_templates/: layout.html
docs/source/pages/: cli_options.rst  installation.rst  macaron_action.rst  output_files.rst  security_policy.rst  using.rst  vsa.rst
golang/: README.md
golang/cmd/actionparser/: README.md  actionparser.go
golang/cmd/bashexprparser/: bashexprparser.go
golang/cmd/bashparser/: README.md  bashparser.go
golang/cmd/cue_validator/: cue_validator.go
golang/cmd/cuevalidator/: README.md  cuevalidator.go
golang/cue/: validate.go
golang/internal/actionparser/: actionparser.go  actionparser_test.go
golang/internal/bashparser/: bashparser.go  bashparser_test.go
golang/internal/cue_validator/: cgo_helper.go  cue_validator.go  cue_validator_test.go
golang/internal/cuevalidator/: cuevalidator.go  cuevalidator_test.go
golang/internal/filewriter/: filewriter.go  filewriter_test.go
scripts/: find_packages.sh
scripts/actions/: run_macaron_analysis.sh  run_macaron_policy_verification.sh  setup_macaron.sh  write_job_summary.py  write_job_summary.sh
scripts/dev_scripts/: build.sh  build_docker.sh  build_push_docker.sh  copyright-checker.sh  format_checker.py  integration_tests.sh  integration_tests_docker.sh  samples_permissions_checker.sh  test_run_macaron_sh.py
scripts/release_scripts/: check_vsa.sh  install_macaron_python.sh  run_macaron.sh
src/macaron/: __init__.py  __main__.py  ai.py  console.py  env.py  environment_variables.py  errors.py  json_tools.py  py.typed  util.py
src/macaron/ai/: README.md  __init__.py  ai_client.py  ai_factory.py  ai_tools.py  openai_client.py
src/macaron/artifact/: local_artifact.py  maven.py
src/macaron/build_spec_generator/: base_cli_option.py  build_command_patcher.py  build_spec_generator.py  generic_build_spec.py  gradle_cli_command.py  gradle_cli_parser.py  internal_build_info.py  jdk_finder.py  jdk_version_normalizer.py  macaron_db_extractor.py  maven_cli_command.py  maven_cli_parser.py  reproducible_central.py
src/macaron/code_analyzer/: call_graph.py
src/macaron/config/: README.md  defaults.ini  defaults.py  global_config.py  target_config.py  target_config_schema.yaml
src/macaron/database/: database_manager.py  db_custom_types.py  rfc3339_datetime.py  table_definitions.py  views.py
src/macaron/dependency_analyzer/: __init__.py  cyclonedx.py  cyclonedx_gradle.py  cyclonedx_mvn.py  cyclonedx_python.py  dependency_resolver.py  java_repo_finder.py  repo_finder.py
src/macaron/graph/: __init__.py  graph.py
src/macaron/intoto/: __init__.py  encoder_decoder.py  errors.py
src/macaron/malware_analyzer/: README.md  __init__.py  datetime_parser.py
src/macaron/output_reporter/: __init__.py  jinja2_extensions.py  malware_summary.py  reporter.py  results.py  scm.py
src/macaron/parsers/: actionparser.py  bashparser.py  bashparser_model.py  github_workflow_model.py  gradleparser.py  limited_xmlparser.py  pomparser.py
tests/: __init__.py  conftest.py  defaults.ini  macaron_testcase.py  st.py  test_env.py  test_environment_variables.py  test_main.py  test_util.py
tests/analyze_json_output/: compare_analyze_json_output.py
tests/artifact/: test_local_artifact.py  test_maven.py
tests/build_spec_generator/: test_base_cli_options.py  test_build_command_patcher.py  test_gradle_cli_command.py  test_gradle_cli_parser.py  test_jdk_version_finder.py  test_jdk_version_normalizer.py  test_macaron_db_extractor.py  test_maven_cli_command.py  test_maven_cli_parser.py
tests/config/: test_defaults.py
tests/database/: test_database_manager.py
tests/dependency_analyzer/: compare_dependencies.py  test_dependency_analyzer.py
tests/e2e/: compare_e2e_result.py
tests/find_source/: compare_source_reports.py
tests/graph/: test_graph.py
tests/integration/: README.md  run.py
tests/intoto/: __init__.py  test_encoder_decoder.py
tests/output_reporter/: template.html  test_jinja_extensions.py  test_malware_summary.py  test_reporter.py  test_write_job_summary.py
tests/path_utils/: test_purl_based_path.py
tests/policy_engine/: compare_policy_reports.py  test_datalog_description.py  test_existing_policy.py  test_main.py  test_policy.py  test_souffle.py
tests/provenance/: __init__.py  test_provenance_extractor.py  test_provenance_finder.py
tests/repo_finder/: test_commit_finder.py  test_provenance_extractor.py  test_provenance_finder.py  test_repo_finder.py  test_repo_finder_deps_dev.py  test_report_schema.py
tests/repo_verifier/: test_repo_verifier.py
tests/schema_validation/: __init__.py  json_schema_validate.py  report_schema.json  test_buildspec_schema_notes.py
tests/slsa_analyzer/: mock_git_utils.py  test_analyze_context.py  test_analyzer.py  test_database_store.py  test_git_url.py  test_slsa_requirements.py
tests/vsa/: compare_vsa.py  test_compare_vsa.py  test_vsa.py
(+1120 files in other folders)
